dani/styles/style.css
body {
  font-family: "Inter";
  font-style: normal;
  font-size: 24px;
  background-color: #252526;
  overflow-x: hidden; /* Hide horizontal scrollbar */
}

h1 {
  font-family: "Inter";
  font-style: normal;
  font-size: 48px;
  font-weight: 700;
  color: white;
  text-shadow: 5px 5px 10px #111111;
  animation: fade-in 2s ease;
}

h2 {
  font-family: "Inter";
  font-style: normal;
  font-size: 24px;
  font-weight: 400;
  color: white;
  text-shadow: 5px 5px 10px #111111;
  animation: fade-in 2s ease;
}

p {
  font-family: "Inter";
  font-style: normal;
  font-size: 17px;
  font-weight: 400;
  color: rgb(175, 175, 175);
}

label {
  font-family: "Inter";
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  color: rgb(175, 175, 175);
}

#page-home {
  min-height: 1600px;
}

#page-features {
  transform: scale(1.09);
  background-color: #5e42a6;
  padding: 100px 0px 100px 0px;
  min-height: 600px;
}

#page-gallery {
  transform: scale(1.09);
  background-color: #a425a0;
  padding: 100px 0px 100px 0px;
  min-height: 600px;
}

#page-download {
  transform: scale(1.09);
  background-color: #5e42a6;
  padding: 100px 0px 100px 0px;
  min-height: 600px;
}

.heading {
  display: flex;
  justify-content: center;
  text-align: center;
}

/* threejs background */
.container {
  position: fixed;
  right: 0;
  transform: scale(1.09);
  z-index: -10;
  opacity: 0.8;
}

/* features */
.post-container {
  margin: 50px auto;
  width: 50%;
  overflow: auto;
  max-width: 850px;
}

.post-thumb-left {
  margin-right: 25px;
  float: left;
}

.post-thumb-right {
  margin-left: 25px;
  float: right;
}

.post-thumb img {
  display: block;
}

.post-content {
  margin-left: 0px;
}

.wallpapers {
  list-style-type: none;
  animation: zoom-in 1.5s ease;
  position: absolute;
  top: 100px;
  left: 0;
}

li.library {
  font-family: "Inter";
  font-style: normal;
  font-size: 14px;
  margin: 5px;
  float: left;
  width: 180px;
}

li.library img:hover {
  transform: scale(1.05);
  transition: 0.5s;
  filter: brightness(1.2);
  cursor: pointer;
}

li.library img {
  width: 100%;
  height: auto;
  border-radius: 5px;
  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
}

div.desc {
  color: white;
  padding: 0px;
  text-align: left;
  margin: -25px 0 0 5px;
  text-shadow: 1px 1px 2px rgb(0, 0, 0);
}

/* app ui */
.ui-app {
  animation: zoom-in 1.5s ease;
  position: fixed;
  width: 798px;
  height: 709px;
  top: 50%;
  left: 50%;
  margin-top: 100px;
  margin-left: -399px; /* Negative half of width. */
  user-select: none;
}

#ui-app-library {
  position: absolute;
  z-index: 1;
}

#ui-app-customise {
  position: absolute;
  pointer-events: none;
  opacity: 0;
  z-index: 2;
}

#ui-app-customise-controls {
  position: absolute;
  left: 300px;
  top: 125px;
}

.logo {
  /* -webkit-animation: spin 14s linear infinite;
  -moz-animation: spin 14s linear infinite;
  animation: spin 14s linear infinite; */
  filter: drop-shadow(10px 5px 7.5px rgba(0, 0, 0, 0.5));
}

.ui-app-img {
  filter: drop-shadow(5px 0px 10px rgba(0, 0, 0, 0.5));
}

.ui-app-dialog-img {
  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
}

@-moz-keyframes spin {
  100% {
    -moz-transform: rotate(360deg);
  }
}
@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}
@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes zoom-in {
  0% {
    transform: scale(0.75, 0.75);
  }
  100% {
    transform: scale(1, 1);
  }
}

@media screen and (max-width: 768px) {
  .ui-app {
    display: none !important;
  }
}

